daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N22_bad_dhkem_encapsulation/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658406e54158e30dc037f5ddf5d3aafc85d73e9dba8e4679c03642e01ded0730b7f9c251f328d6d103d3224cd3594c2bfda77b2bd036264b4b814112823f409072448
